--- a/uxui.html
+++ b/uxui.html
@@ -50,12 +50,12 @@
 		<h1>UX &amp; UI Design</h1>
 		<div class="column">
 			<a class="card" href="Vuorox.html">
-				<div class="content-field" style="height: 45vh; background-image: url(Liitteet/Vuorox/hero.png); background-color: var(--vuorox-secondary);">
+				<div class="content-field" style="height: 45vh; background-image: url(Liitteet/Vuorox/Hero.png); background-color: var(--vuorox-secondary);">
 				</div>
 				<div class="content-field">
 					<h2 style="">Vuorox</h2>
 					<p>An app where nurses can check their work shifts and manage them.</p>
-					<div class="button" href="Vuorox.html">View project</div>
+					<div class="button" href="vuorox.html">View project</div>
 				</div>
 			</a>
 			<a class="card" href="Lekatech.html">
@@ -63,7 +63,7 @@
 				<div class="content-field">
 					<h2 style="">Lekatech</h2>
 					<p>UI for remote control electric breaker hammer.</p>
-					<div class="button" href="Lekatech.html">View project</div>
+					<div class="button" href="lekatech.html">View project</div>
 				</div>
 			</a>
 		</div>
