--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 			<p>I'm Miro, a soon-to-graduate UX &amp; UI Design student from Lahti. I study in Design Institute of LAB University of applied sciences. I have also studied and worked as a graphic designer earlier mostly as a freelancer.</p>
 			<h3>View my work</h3>
 			<div class="minisection">
-				<a class="button" href="UXUI.html">UX&nbsp;&amp;&nbsp;UI&nbsp;Design</a>
-				<a class="button secondarybutton" href="Graphicdesign.html">Graphic&nbsp;Design</a>
+				<a class="button" href="uxui.html">UX&nbsp;&amp;&nbsp;UI&nbsp;Design</a>
+				<a class="button secondarybutton" href="graphicdesign.html">Graphic&nbsp;Design</a>
 			</div>
 		</div>
 		<div class="content-field" style="align-items:center; justify-content:center">
