--- a/uxui.html
+++ b/uxui.html
@@ -49,21 +49,21 @@
 	<div class="content-field" style="margin-top: 50px; min-height: calc(100vh - 100px)">
 		<h1>UX &amp; UI Design</h1>
 		<div class="column">
-			<a class="card" href="Vuorox.html">
+			<a class="card" href="lekatech.html">
 				<div class="content-field" style="height: 45vh; background-image: url(Liitteet/Vuorox/Hero.png); background-color: var(--vuorox-secondary);">
 				</div>
 				<div class="content-field">
 					<h2 style="">Vuorox</h2>
 					<p>An app where nurses can check their work shifts and manage them.</p>
-					<div class="button" href="vuorox.html">View project</div>
+					<div class="button">View project</div>
 				</div>
 			</a>
-			<a class="card" href="Lekatech.html">
+			<a class="card" href="vuorox.html">
 				<div class="content-field" style="height: 45vh; background-image: url(Liitteet/Lekatech/Lekatech-mockup-cut.png); background-color: var(--lekatech-background);"></div>
 				<div class="content-field">
 					<h2 style="">Lekatech</h2>
 					<p>UI for remote control electric breaker hammer.</p>
-					<div class="button" href="lekatech.html">View project</div>
+					<div class="button">View project</div>
 				</div>
 			</a>
 		</div>
