--- a/vuorox.html
+++ b/vuorox.html
@@ -81,7 +81,7 @@
 			<br>
 			<div class="minisection">
 				<a class="button" href="#anchor">View screens</a>
-				<a class="button secondarybutton" href="UXUI.html">Back</a>
+				<a class="button secondarybutton" href="uxui.html">Back</a>
 			</div>
 		</div>
 		<div class="content-field">
