--- a/lekatech.html
+++ b/lekatech.html
@@ -75,7 +75,7 @@
 			<br>
 			<div class="minisection">
 				<a class="button" href="#anchor2">View screens</a>
-				<a class="button secondarybutton" href="UXUI.html">Back</a>
+				<a class="button secondarybutton" href="uxui.html">Back</a>
 			</div>
 		</div>
 		<div class="content-field">
