--- a/vuorox.html
+++ b/vuorox.html
@@ -9,13 +9,8 @@
 	<script src="javascript.js"></script>
 	<style>
 		
-		.darkmode h1,
-		.darkmode h2 {
+		.darkmode h1 {
 			color: white;
-		}
-		
-		h2 {
-			color: var(--vuorox-secondary);
 		}
 		
 		.darkmode p {
@@ -32,7 +27,7 @@
 	
 	
 
-<body style="background-color: var(--vuorox-background);">	
+<body>	
 	
 	
 <!--NAVIGAATIO-->
@@ -140,7 +135,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="content-field" style="min-height: calc(100vh - 100px);">
+	<div class="content-field darkmode" style="min-height: calc(100vh - 100px);">
 		<div class="column">
 			<div class="content-field" style="width: 30%;">
 				<h2>Wishes</h2>
