--- a/aboutme.html
+++ b/aboutme.html
@@ -54,6 +54,7 @@
 						Graphic Design<br>
 						Usability testing<br>
 						User research<br>
+						Accessibility evalutation<br>
 						HTML &amp; CSS<br>
 						Website building &amp; management<br></p>
 					</div>
