--- a/graphicdesign.html
+++ b/graphicdesign.html
@@ -43,11 +43,9 @@
 			</div>
 			<div class="content-field"></div>
 		</div>
-	</div>
-	<div class="content-field">
 		<div class="gallery">
 			<a class="galleryimage" target="_blank" href="Liitteet/Staffroom/Logo-mockup.gif" style="background-image: url(Liitteet/Staffroom/Logo-mockup.gif);">
-				<h3>Logos</h3>
+				<h3>Logo design</h3>
 			</a>
 			<a class="galleryimage" target="_blank" href="Liitteet/Citycon/Rintanappi.jpg" style="background-image: url(Liitteet/Citycon/Rintanappi.jpg);">
 				<h3>Name plates</h3>
@@ -56,7 +54,7 @@
 				<h3>Price canvases</h3>
 			</a>
 			<a class="galleryimage" target="_blank" href="Liitteet/Citymarket/Mockup.png" style="background-image: url(Liitteet/Citymarket/Mockup.png);">
-				<h3>Newspaper commercials</h3>
+				<h3>Newspaper advertisements</h3>
 			</a>
 			<a class="galleryimage" target="_blank" href="Liitteet/Instrumentarium/Flyer-mockup.png" style="background-image: url(Liitteet/Instrumentarium/Flyer-mockup.png);">
 				<h3>Flyers</h3>
@@ -68,7 +66,7 @@
 				<h3>Roll ups</h3>
 			</a>
 			<a class="galleryimage" target="_blank" href="Liitteet/Koulu/Routehouse-mockup3.png" style="background-image: url(Liitteet/Koulu/Routehouse-mockup3.png);">
-				<h3>Graphic manuals</h3>
+				<h3>Graphic manual</h3>
 			</a>
 		</div>
 	</div>
