--- a/graphicdesign.html
+++ b/graphicdesign.html
@@ -35,7 +35,7 @@
 <!--BODY-->	
 	
 
-	<div class="content-field" style="margin-top: 50px;">
+	<div class="content-field" style="padding-top: 75px;">
 		<h1>Graphic design</h1>
 		<div class="column">
 			<div class="content-field">
