--- a/uxui.html
+++ b/uxui.html
@@ -20,10 +20,7 @@
 	
 	
 
-<body class="darkmode" style="background: linear-gradient(
-      var(--primary-light), 
-      var(--primary-light)
-    );">	
+<body class="darkmode" style="background: var(--primary-light);">	
 	
 	
 <!--NAVIGAATIO-->
@@ -46,7 +43,7 @@
 <!--BODY-->	
 	
 
-	<div class="content-field" style="margin-top: 50px; min-height: calc(100vh - 100px)">
+	<div class="content-field" style="padding-top: 75px; min-height: calc(100vh - 100px)">
 		<h1>UX &amp; UI Design</h1>
 		<div class="column">
 			<a class="card" href="vuorox.html">
