--- a/lekatech.html
+++ b/lekatech.html
@@ -7,6 +7,7 @@
 	<link href="styles.css" rel="stylesheet" type="text/css">
 	<link rel="icon" type="image/x-icon" href="#"> <!--FAVICON-->
 	<script src="javascript.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0;">
 	<style>
 		
 		.darkmode h1 {
