--- a/uxui.html
+++ b/uxui.html
@@ -7,14 +7,7 @@
 	<link href="styles.css" rel="stylesheet" type="text/css">
 	<link rel="icon" type="image/x-icon" href="#"> <!--FAVICON-->
 	<script src="javascript.js"></script>
-	<style>
-		
-		.darkmode .plus,
-		.darkmode .plus::before {
-			background-color: var(--tertiary);
-		}
-			
-	</style>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0;">
 </head>
 	
 	
