--- a/aboutme.html
+++ b/aboutme.html
@@ -13,12 +13,12 @@
 	
 	
 
-<body class="darkmode" style="background: linear-gradient(var(--primary-light), var(--primary-light));">	
+<body>	
 	
 	
 <!--NAVIGAATIO-->
 	
-	<div class="navbar darkmode">
+	<div class="navbar">
 		<a class="logo-container" href="index.html">Miro Eskelinen</a>
 		<input id="menu-toggle" type="checkbox"/>
 		<label class="hamburger-container" for="menu-toggle">
