--- a/graphicdesign.html
+++ b/graphicdesign.html
@@ -13,12 +13,12 @@
 	
 	
 
-<body class="darkmode" style="background: var(--primary-light);">	
+<body>	
 	
 	
 <!--NAVIGAATIO-->
 	
-	<div class="navbar darkmode">
+	<div class="navbar">
 		<a class="logo-container" href="index.html">Miro Eskelinen</a>
 		<input id="menu-toggle" type="checkbox"/>
 		<label class="hamburger-container" for="menu-toggle">
@@ -38,36 +38,87 @@
 
 	<div class="content-field" style="padding-top: 75px;">
 		<h1>Graphic design</h1>
-		<div class="column">
-			<div class="content-field">
-				<p>Here are some examples work I've done over the years. Most of these i've done to customers as personal custom work but some i've done when I was working at an advertising agency called Orange Advertising. Clients include Staffroom, Citycon, K-Citymarket Riihimäki and Instrumentarium.</p>
-			</div>
-			<div class="content-field"></div>
-		</div>
+		<p>Here are some examples work I've done over the years. Most of these i've done to customers as personal custom work but some i've done when I was working at an advertising agency called Orange Advertising. Clients include Staffroom, Citycon, K-Citymarket Riihimäki and Instrumentarium.</p>
+	</div>
+	<div class="content-field">
+		<h2>Staffroom</h2>
 		<div class="gallery">
-			<a class="galleryimage" target="_blank" href="Liitteet/Staffroom/Logo-mockup.gif" style="background-image: url(Liitteet/Staffroom/Logo-mockup.gif);">
-				<h3>Logo design</h3>
+			<a target="_blank" href="Liitteet/Staffroom/Logo-mockup.gif">
+				<img class="galleryimage" src="Liitteet/Staffroom/Logo-mockup.gif" alt="Staffroom Logo">
 			</a>
-			<a class="galleryimage" target="_blank" href="Liitteet/Citycon/Rintanappi.jpg" style="background-image: url(Liitteet/Citycon/Rintanappi.jpg);">
-				<h3>Name plates</h3>
+			<a target="_blank" href="Liitteet/Staffroom/Flyers-mockup.png">
+				<img class="galleryimage" src="Liitteet/Staffroom/Flyers-mockup.png" alt="Staffroom Flyers">
 			</a>
-			<a class="galleryimage" target="_blank" href="Liitteet/Citycon/omena_hintapohja.jpg" style="background-image: url(Liitteet/Citycon/omena_hintapohja.jpg);">
-				<h3>Price canvases</h3>
+			<a target="_blank" href="Liitteet/Staffroom/Rollup-mockup.jpg">
+				<img class="galleryimage" src="Liitteet/Staffroom/Rollup-mockup.jpg" alt="Staffroom Rollup">
 			</a>
-			<a class="galleryimage" target="_blank" href="Liitteet/Citymarket/Mockup.png" style="background-image: url(Liitteet/Citymarket/Mockup.png);">
-				<h3>Newspaper advertisements</h3>
+			<a target="_blank" href="Liitteet/Staffroom/Kayntikortit-mockup.jpg">
+				<img class="galleryimage" src="Liitteet/Staffroom/Kayntikortit-mockup.jpg" alt="Staffroom Cards">
 			</a>
-			<a class="galleryimage" target="_blank" href="Liitteet/Instrumentarium/Flyer-mockup.png" style="background-image: url(Liitteet/Instrumentarium/Flyer-mockup.png);">
-				<h3>Flyers</h3>
+			<a target="_blank" href="Liitteet/Staffroom/Luustonkuntokartoitus-mockup.jpg">
+				<img class="galleryimage" src="Liitteet/Staffroom/Luustonkuntokartoitus-mockup.jpg" alt="Staffroom Form">
 			</a>
-			<a class="galleryimage" target="_blank" href="Liitteet/Instrumentarium/Kuponki-mockup.png" style="background-image: url(Liitteet/Instrumentarium/Kuponki-mockup.png);">
-				<h3>Coupons</h3>
+		</div>
+	</div>
+	<div class="content-field">
+		<h2>Citymarket</h2>
+		<div class="gallery">
+			<a href="Liitteet/Citymarket/aamuposti_KCM_16_8.jpg">
+				<img class="galleryimage" src="Liitteet/Citymarket/aamuposti_KCM_16_8.jpg" alt="Citymarket newspaper ad">
 			</a>
-			<a class="galleryimage" target="_blank" href="Liitteet/Staffroom/Rollup-mockup2.jpg" style="background-image: url(Liitteet/Staffroom/Rollup-mockup2.jpg);">
-				<h3>Roll ups</h3>
+			<a href="Liitteet/Citymarket/aamuposti_kcm_20_8.jpg">
+				<img class="galleryimage" src="Liitteet/Citymarket/aamuposti_kcm_20_8.jpg" alt="Citymarket newspaper ad">
 			</a>
-			<a class="galleryimage" target="_blank" href="Liitteet/Koulu/Routehouse-mockup3.png" style="background-image: url(Liitteet/Koulu/Routehouse-mockup3.png);">
-				<h3>Graphic manual</h3>
+			<a href="Liitteet/Citymarket/aamuposti_KCM_23_8_some.jpg">
+				<img class="galleryimage" src="Liitteet/Citymarket/aamuposti_KCM_23_8_some.jpg" alt="Citymarket newspaper ad">
+			</a>
+			<a href="Liitteet/Citymarket/aamuposti_KCM_25_8.jpg">
+				<img class="galleryimage" src="Liitteet/Citymarket/aamuposti_KCM_25_8.jpg" alt="Citymarket newspaper ad">
+			</a>
+			<a href="Liitteet/Citymarket/aamuposti_kcm_27_8.jpg">
+				<img class="galleryimage" src="Liitteet/Citymarket/aamuposti_kcm_27_8.jpg" alt="Citymarket newspaper ad">
+			</a>
+			<a href="Liitteet/Citymarket/aamuposti_KCM_30_8_some.jpg">
+				<img class="galleryimage" src="Liitteet/Citymarket/aamuposti_KCM_30_8_some.jpg" alt="Citymarket newspaper ad">
+			</a>
+		</div>
+	</div>
+	<div class="content-field">
+		<h2>Citycon</h2>
+		<div class="gallery">
+			<a target="_blank" href="Liitteet/Citycon/omena_hintapohja.jpg">
+				<img class="galleryimage" src="Liitteet/Citycon/omena_hintapohja.jpg" alt="Citycon pricecanvas">
+			</a>
+			<a target="_blank" href="Liitteet/Citycon/Rintanappi.jpg">
+				<img class="galleryimage" src="Liitteet/Citycon/Rintanappi.jpg" alt="Citycon nametag">
+			</a>
+			<a target="_blank" href="Liitteet/Citycon/DUO-Lego-kartta.jpg">
+				<img class="galleryimage" src="Liitteet/Citycon/DUO-Lego-kartta.jpg" alt="Citycon map">
+			</a>
+		</div>
+	</div>
+	<div class="content-field">
+		<h2>Instrumentarium</h2>
+		<div class="gallery">
+			<a href="Liitteet/Instrumentarium/Flyer-mockup.png" target="_blank">
+				<img class="galleryimage" src="Liitteet/Instrumentarium/Flyer-mockup.png" alt="Instrumentarium flyer">
+			</a>
+			<a href="Liitteet/Instrumentarium/Kuponki-mockup.png" target="_blank">
+				<img class="galleryimage" src="Liitteet/Instrumentarium/Kuponki-mockup.png" alt="Instrumentarium coupons">
+			</a>
+		</div>
+	</div>
+	<div class="content-field">
+		<h2>Others</h2>
+		<div class="gallery">
+			<a target="_blank" href="Liitteet/Yksittaistilaukset/TampereFormulaStudent-logo.jpg">
+				<img class="galleryimage" src="Liitteet/Yksittaistilaukset/TampereFormulaStudent-logo.jpg" alt="Tampere Formula Student logo">
+			</a>
+			<a target="_blank" href="Liitteet/Yksittaistilaukset/Lastenkirjafestari-logo.jpg">
+				<img class="galleryimage" src="Liitteet/Yksittaistilaukset/Lastenkirjafestari-logo.jpg" alt="Lastenkirjafestarit logo">
+			</a>
+			<a target="_blank" href="Liitteet/SKA/Mockup.jpg">
+				<img class="galleryimage" src="Liitteet/SKA/Mockup.jpg" alt="SKA flyers">
 			</a>
 		</div>
 	</div>
