--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	
 <!--NAVIGAATIO-->
 	
-	<div class="navbar darkmode">
+	<div class="navbar">
 		<a class="logo-container" href="index.html">Miro Eskelinen</a>
 		<input id="menu-toggle" type="checkbox"/>
 		<label class="hamburger-container" for="menu-toggle">
@@ -35,7 +35,7 @@
 	
 <!--HERO-->	
 	
-	<div class="hero reversed darkmode" style="background: linear-gradient(var(--primary-light), var(--primary-light));">
+	<div class="hero reversed">
 		<div class="content-field" style="justify-content: center">
 			<h1>Hi, I'm Miro. Welcome to my portfolio!</h1>
 			<p>I'm Miro, a soon-to-graduate UX &amp; UI Design student from Lahti. I study in Design Institute of LAB University of applied sciences. I have also studied and worked as a graphic designer earlier mostly as a freelancer.</p>
@@ -46,9 +46,7 @@
 			</div>
 		</div>
 		<div class="content-field" style="align-items:center; justify-content:center">
-			<div class="pictureframe" style="
-			background-color: var(--secondary);
-			max-height: 65vh;">
+			<div class="pictureframe" style="background-color: #068080; max-height: 65vh;">
 				<img src="Liitteet/Portfoliokuva.png" alt="Profiilikuva" style="width:75%;">
 			</div>
 		</div>
