--- a/lekatech.html
+++ b/lekatech.html
@@ -88,7 +88,7 @@
 	
 <!--BODY-->
 
-	<div class="content-field" style="min-height: calc(100vh - 100px)">
+	<div class="content-field lightmode" style="min-height: calc(100vh - 100px)">
 		<div class="column reversed">
 			<div class="column" style="flex-direction: row; gap: 0;">
 				<div class="content-field" style="width: fit-content; align-items: center !important;">
@@ -135,15 +135,11 @@
 			<div class="column">
 				<div class="content-field" style="width: fit-content">
 					<h3 style="color: var(--text-light);">Enhanced</h3>
-					<div class="screen">
-						<img src="Liitteet/Lekatech/Enhanced.png" alt="Enhanced">
-					</div>
+					<img class="screen" src="Liitteet/Lekatech/Enhanced.png" alt="Enhanced">
 				</div>
 				<div class="content-field" style="width: fit-content">
 					<h3 style="color: var(--text-light);">Innovative</h3>
-					<div class="screen">
-						<img src="Liitteet/Lekatech/Innovative.png" alt="Innovative">
-					</div>
+					<img class="screen" src="Liitteet/Lekatech/Innovative.png" alt="Innovative">
 				</div>
 			</div>
 		</div>
@@ -187,19 +183,13 @@
 			</div>
 			<div class="column">
 				<div class="content-field">
-					<div class="screen">
-						<img src="Liitteet/Lekatech/Innovative.png" alt="Enhanced">
-					</div>
+					<img class="screen" src="Liitteet/Lekatech/Innovative.png" alt="Enhanced">
 				</div>
 				<div class="content-field">
-					<div class="screen">
-						<img src="Liitteet/Lekatech/Hammering.png" alt="Hammering">
-					</div>
+					<img class="screen" src="Liitteet/Lekatech/Hammering.png" alt="Hammering">
 				</div>
 				<div class="content-field">
-					<div class="screen">
-						<img src="Liitteet/Lekatech/Error.png" alt="Error">
-					</div>
+					<img class="screen" src="Liitteet/Lekatech/Error.png" alt="Error">
 				</div>
 			</div>
 		</div>
@@ -214,22 +204,16 @@
 			<div class="column">
 				<div class="content-field">
 					<h3>Mode selection</h3>
-					<div class="screen">
-						<img src="Liitteet/Lekatech/Mode-selection.png" alt="Mode selection">
-					</div>
+					<img class="screen" src="Liitteet/Lekatech/Mode-selection.png" alt="Mode selection">
 				</div>
 				<div class="content-field">
 					<h3>Cycle selection</h3>
-					<div class="screen">
-						<img src="Liitteet/Lekatech/Cycle-selection.png" alt="Cycle selection">
-					</div>
+					<img class="screen" src="Liitteet/Lekatech/Cycle-selection.png" alt="Cycle selection">
 				</div>
 				<div class="content-field">
 					<h3>Edit/create cycle pop-up</h3>
-					<div class="screen">
-						<img src="Liitteet/Lekatech/Edit-cycle-pop-up.png" alt="Edit cycle">
-					</div>
-				</div>	
+					<img class="screen" src="Liitteet/Lekatech/Edit-cycle-pop-up.png" alt="Edit cycle">
+				</div>
 			</div>
 		</div>
 	</div>
@@ -241,19 +225,13 @@
 			</div>
 			<div class="column">
 				<div class="content-field">
-					<div class="screen">
-						<img src="Liitteet/Lekatech/Cycle.png" alt="Cycle">
-					</div>
+					<img class="screen" src="Liitteet/Lekatech/Cycle.png" alt="Cycle">
 				</div>
 				<div class="content-field">
-					<div class="screen">
-						<img src="Liitteet/Lekatech/Cycle-hammering.png" alt="Cycle hammering">
-					</div>
+					<img class="screen" src="Liitteet/Lekatech/Cycle-hammering.png" alt="Cycle hammering">
 				</div>
 				<div class="content-field">
-					<div class="screen">
-						<img src="Liitteet/Lekatech/Cycle-hammering2.png" alt="Cycle hammering 2">
-					</div>
+					<img class="screen" src="Liitteet/Lekatech/Cycle-hammering2.png" alt="Cycle hammering 2">
 				</div>
 			</div>
 		</div>
@@ -263,27 +241,19 @@
 		<div class="column">
 			<div class="content-field">
 				<h3>Status Details</h3>
-				<div class="screen">
-					<img src="Liitteet/Lekatech/Status-Details.png" alt="Status Details">
-				</div>
+				<img class="screen" src="Liitteet/Lekatech/Status-Details.png" alt="Status Details">
 			</div>
 			<div class="content-field">
 				<h3>Machine data</h3>
-				<div class="screen">
-					<img src="Liitteet/Lekatech/Machine-data.png" alt="Machine Data">
-				</div>
+				<img class="screen" src="Liitteet/Lekatech/Machine-data.png" alt="Machine Data">
 			</div>
 			<div class="content-field">
 				<h3>Log in</h3>
-				<div class="screen">
-					<img src="Liitteet/Lekatech/Log-in.png" alt="Log in">
-				</div>
+				<img class="screen" src="Liitteet/Lekatech/Log-in.png" alt="Log in">
 			</div>
 			<div class="content-field">
 				<h3>Profile</h3>
-				<div class="screen">
-					<img src="Liitteet/Lekatech/Profile.png" alt="Profile">
-				</div>
+				<img class="screen" src="Liitteet/Lekatech/Profile.png" alt="Profile">
 			</div>
 		</div>
 	</div>
