--- a/vuorox.html
+++ b/vuorox.html
@@ -88,7 +88,7 @@
 	
 	
 <!--BODY-->
-	<div  class="content-field" style="min-height: calc(100vh - 100px);">
+	<div  class="content-field lightmode" style="min-height: calc(100vh - 100px);">
 		<div class="column">
 			<div class="content-field">
 				<h2>Problem</h2>
@@ -122,16 +122,16 @@
 				<p>From the interviews we concluded that to see the upcoming shift is the most crucial information and right next to that the shifts of the current shift list.</p>
 			</div>
 			<div class="content-field" style="align-items: center;">
-				<div class="screen"><img src="Liitteet/Vuorox/Etusivu.png" alt="Etusivu"></div>
+				<img class="screen" src="Liitteet/Vuorox/Etusivu.png" alt="Etusivu">
 			</div>
 			<div class="content-field">
 				<div class="column">
-					<div class="screen"><img src="Liitteet/Vuorox/Aamuvuoro.png" alt="Aamuvuoro"></div>
-					<div class="screen"><img src="Liitteet/Vuorox/Iltavuoro.png" alt="Iltavuoro"></div>
+					<img class="screen" src="Liitteet/Vuorox/Aamuvuoro.png" alt="Aamuvuoro">
+					<img class="screen" src="Liitteet/Vuorox/Iltavuoro.png" alt="Iltavuoro">
 				</div>
 				<div class="column">
-					<div class="screen"><img src="Liitteet/Vuorox/Yovuoro.png" alt="Yövuoro"></div>
-					<div class="screen"><img src="Liitteet/Vuorox/Vapaa.png" alt="Vapaa"></div>
+					<img class="screen" src="Liitteet/Vuorox/Yovuoro.png" alt="Yövuoro">
+					<img class="screen" src="Liitteet/Vuorox/Vapaa.png" alt="Vapaa">
 				</div>
 			</div>
 		</div>
@@ -143,10 +143,10 @@
 				<p>The most crucial functions aside from seeing the work shifts were to leave day-specific shift wishes and to manage your general work time wishes.</p>
 			</div>
 			<div class="column">
-				<div class="screen"><img src="Liitteet/Vuorox/Vuorotoiveet.png" alt="Toiveet"></div>
-				<div class="screen"><img src="Liitteet/Vuorox/Vuorotoive.png" alt="Toive" style="max-height: 55vh"></div>
-				<div class="screen"><img src="Liitteet/Vuorox/Vapaatoive.png" alt="Vapaatoive" style="max-height: 55vh"></div>
-				<div class="screen"><img src="Liitteet/Vuorox/Yleiset-vuorotoiveet.png" alt="Yleiset"></div>
+				<img class="screen" src="Liitteet/Vuorox/Vuorotoiveet.png" alt="Toiveet">
+				<img class="screen" src="Liitteet/Vuorox/Vuorotoive.png" alt="Toive" style="max-height: 55vh">
+				<img class="screen" src="Liitteet/Vuorox/Vapaatoive.png" alt="Vapaatoive" style="max-height: 55vh">
+				<img class="screen" src="Liitteet/Vuorox/Yleiset-vuorotoiveet.png" alt="Yleiset">
 			</div>
 		</div>
 	</div>
@@ -155,16 +155,16 @@
 			<div class="column">
 				<div class="content-field">
 					<h2>Settings</h2>
-					<div class="screen"><img src="Liitteet/Vuorox/Asetukset.png" alt="Asetukset"></div>
+					<img class="screen" src="Liitteet/Vuorox/Asetukset.png" alt="Asetukset">
 				</div>
 				<div class="content-field">
 					<h2>Log in</h2>
-					<div class="screen"><img src="Liitteet/Vuorox/Kirjautumisruutu.png" alt="Asetukset"></div>
+					<img class="screen" src="Liitteet/Vuorox/Kirjautumisruutu.png" alt="Asetukset">
 				</div>
 			</div>
 			<div class="content-field">
 				<h2>Desktop</h2>
-				<div class="screen"><img src="Liitteet/Vuorox/Desktop.png" alt="Asetukset"></div>
+				<img class="screen" src="Liitteet/Vuorox/Desktop.png" alt="Asetukset">
 			</div>
 		</div>
 	</div>
