--- a/uxui.html
+++ b/uxui.html
@@ -13,12 +13,12 @@
 	
 	
 
-<body class="darkmode" style="background: var(--primary-light);">	
+<body>	
 	
 	
 <!--NAVIGAATIO-->
 	
-	<div class="navbar darkmode">
+	<div class="navbar">
 		<a class="logo-container" href="index.html">Miro Eskelinen</a>
 		<input id="menu-toggle" type="checkbox"/>
 		<label class="hamburger-container" for="menu-toggle">
@@ -40,7 +40,7 @@
 		<h1>UX &amp; UI Design</h1>
 		<div class="column">
 			<a class="card" href="vuorox.html">
-				<div class="content-field" style="height: 45vh; background-image: url(Liitteet/Vuorox/Hero.png); background-color: var(--vuorox-secondary);">
+				<div class="pictureframe" style="width: 100%; background-image: url(Liitteet/Vuorox/Hero.png); background-color: var(--vuorox-secondary);">
 				</div>
 				<div class="content-field">
 					<h2 style="">Vuorox</h2>
@@ -49,7 +49,7 @@
 				</div>
 			</a>
 			<a class="card" href="lekatech.html">
-				<div class="content-field" style="height: 45vh; background-image: url(Liitteet/Lekatech/Lekatech-mockup-cut.png); background-color: var(--lekatech-background);"></div>
+				<div class="pictureframe" style="width: 100%; background-image: url(Liitteet/Lekatech/Lekatech-mockup-cut.png); background-color: var(--lekatech-background);"></div>
 				<div class="content-field">
 					<h2 style="">Lekatech</h2>
 					<p>UI for remote control electric breaker hammer.</p>
