--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			</div>
 		</div>
 		<div class="content-field" style="align-items:center; justify-content:center">
-			<div class="pictureframe" style="background-color: #068080; max-height: 65vh;">
+			<div class="pictureframe" style="background-color: var(--primary); max-height: 65vh;">
 				<img src="Liitteet/Portfoliokuva.png" alt="Profiilikuva" style="width:75%;">
 			</div>
 		</div>
