--- a/uxui.html
+++ b/uxui.html
@@ -40,7 +40,9 @@
 		<h1>UX &amp; UI Design</h1>
 		<div class="column">
 			<a class="card" href="vuorox.html">
-				<div class="pictureframe" style="width: 100%; background-image: url(Liitteet/Vuorox/Hero.png); background-color: var(--vuorox-secondary);">
+				<div class="content-field">
+					<div class="pictureframe" style="width: 100%; max-width: 65vw; background-image: url(Liitteet/Vuorox/Hero.png); background-color: var(--vuorox-secondary);">
+					</div>
 				</div>
 				<div class="content-field">
 					<h2 style="">Vuorox</h2>
@@ -49,7 +51,9 @@
 				</div>
 			</a>
 			<a class="card" href="lekatech.html">
-				<div class="pictureframe" style="width: 100%; background-image: url(Liitteet/Lekatech/Lekatech-mockup-cut.png); background-color: var(--lekatech-background);"></div>
+				<div class="content-field">
+					<div class="pictureframe" style="width: 100%; max-width: 65vw; background-image: url(Liitteet/Lekatech/Lekatech-mockup-cut.png); background-color: var(--lekatech-background);"></div>
+				</div>
 				<div class="content-field">
 					<h2 style="">Lekatech</h2>
 					<p>UI for remote control electric breaker hammer.</p>
