--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <!--HERO-->	
 	
 	<div class="hero reversed">
-		<div class="content-field" style="justify-content: center">
+		<div class="content-field">
 			<h1>Hi, I'm Miro. Welcome to my portfolio!</h1>
 			<p>I'm Miro, a soon-to-graduate UX &amp; UI Design student from Lahti. I study in Design Institute of LAB University of applied sciences. I have also studied and worked as a graphic designer earlier mostly as a freelancer.</p>
 			<h3>View my work</h3>
@@ -45,7 +45,7 @@
 				<a class="button secondarybutton" href="graphicdesign.html">Graphic&nbsp;Design</a>
 			</div>
 		</div>
-		<div class="content-field" style="align-items:center; justify-content:center">
+		<div class="content-field" style="align-items:center;">
 			<div class="pictureframe" style="background-color: var(--primary); max-height: 65vh;">
 				<img src="Liitteet/Portfoliokuva.png" alt="Profiilikuva" style="width:75%;">
 			</div>
