--- a/lekatech.html
+++ b/lekatech.html
@@ -54,7 +54,7 @@
 		<div class="content-field" style="padding-right: 5%; width: 95%;">
 			<h1>Lekatech</h1>
 			<p>Assignment was to come up with an UI for an electric breaker hammer. The project was done in corporation with industrial design students who designed the hammer itself.</p>
-			<div class="column" style="align-items: flex-start">
+			<div class="column" style="align-items: flex-start; height: fit-content;">
 				<div class="content-field">
 					<h3>UI team</h3>
 					<p>Miro Eskelinen<br>
