--- a/vuorox.html
+++ b/vuorox.html
@@ -54,7 +54,7 @@
 		<div class="content-field">
 			<h1>Vuorox</h1>
 			<p>Assignment was to come up with an updated concept for Plaincomplex's Vuorox-app, an app where nurses can check up their work shifts and manage them.</p>
-			<div class="column" style="align-items: flex-start">
+			<div class="column" style="align-items: flex-start; height: fit-content;">
 				<div class="content-field">
 					<h3>Team</h3>
 					<p>Miro Eskelinen<br>
