--- a/aboutme.html
+++ b/aboutme.html
@@ -18,67 +18,60 @@
 	
 <!--NAVIGAATIO-->
 	
-	<div class="navbar">
-		<a class="logo-container" href="index.html">Miro Eskelinen</a>
-		<input id="menu-toggle" type="checkbox"/>
-		<label class="hamburger-container" for="menu-toggle">
-			<div class="hamburger"></div>
-		</label>
-		<div class="menu">
-			<a class="menubutton" href="uxui.html">UX&nbsp;&amp;&nbsp;UI&nbsp;Design</a>
-			<a class="menubutton" href="graphicdesign.html">Graphic&nbsp;Design</a>
-			<a class="menubutton current" href="aboutme.html">About&nbsp;me</a>
-		</div>  
-	</div>
+	<header>
+		<div class="navbar">
+			<a class="logo-container" href="index.html">Miro Eskelinen</a>
+			<input id="menu-toggle" type="checkbox"/>
+			<label class="hamburger-container" for="menu-toggle">
+				<div class="hamburger"></div>
+			</label>
+			<div class="menu">
+				<a class="menubutton" href="uxui.html">UX&nbsp;&amp;&nbsp;UI&nbsp;Design</a>
+				<a class="menubutton" href="graphicdesign.html">Graphic&nbsp;Design</a>
+				<a class="menubutton current" href="aboutme.html">About&nbsp;me</a>
+			</div>
+		</div>
+	</header>
 
 	 
 	
 <!--BODY-->	
 	
-	<div class="content-field" style="padding-top: 100px;">
-		<div class="column">
-			<!-- <div class="content-field" style="width: 300px;">
-				<div class="pictureframe" style="background-color: var(--secondary); width: 200px; margin-top: 40px;">
-					<img src="Liitteet/Aboutmekuva.png" alt="Profiilikuva" style="width: 80%;">
-				</div>
-			</div> -->
+	<div class="content-field">
+		<h1>About Me</h1>
+		<p>I have originally graduated from Pekka Halonen Academy in 2018 as a visual artisan, area of expertise being graphic design. I have worked in an advertising agency, a web design agency and as a small entrepreneur. Through out years I have become increasingly more interested in functionality of things rather than just their aesthetics and this has steadily lead me to the world of UX &amp; UI. That and an irritation towards many illogical or needlessly complex user interfaces we encounter every day and thinking how I would change them.<br>
+		<br>
+		In 2021 I began to study UX &amp; UI in Design Institute of LAB University of Applied Sciences. I aim to move into that field of work more in the future although so far I feel like UX &amp; UI education has helped me to become better graphic designer as well. I am very much a team player and having working history in customer service and sales jobs helps me with communication and pitching ideas with customers and team members alike. I also have interest towards game design, screenwriting and storytelling. I often do illustrations as a hobby.</p>
+		<h2>Skills</h2>
+		<div class="column" style="max-width: 600px;">
 			<div class="content-field">
-				<h1>About Me</h1>
-				<p>I have originally graduated from Pekka Halonen Academy in 2018 as a visual artisan, area of expertise being graphic design. I have worked in an advertising agency, a web design agency and as a small entrepreneur. Through out years I have become increasingly more interested in functionality of things rather than just their aesthetics and this has steadily lead me to the world of UX &amp; UI. That and an irritation towards many illogical or needlessly complex user interfaces we encounter every day and thinking how I would change them.<br>
-				<br>
-				In 2021 I began to study UX &amp; UI in Design Institute of LAB University of Applied Sciences. I aim to move into that field of work more in the future although so far I feel like UX &amp; UI education has helped me to become better graphic designer as well. I am very much a team player and having working history in customer service and sales jobs helps me with communication and pitching ideas with customers and team members alike. I also have interest towards game design, screenwriting and storytelling. I often do illustrations as a hobby.</p>
-				<h2>Skills</h2>
-				<div class="column" style="max-width: 600px;">
-					<div class="content-field">
-						<h3>Essentials</h3>
-						<p>UI Design<br>
-						UX Design<br>
-						Graphic Design<br>
-						Usability testing<br>
-						User research<br>
-						Accessibility evalutation<br>
-						HTML &amp; CSS<br>
-						Website building &amp; management<br></p>
-					</div>
-					<div class="content-field">
-						<h3>Tools</h3>
-						<p>Figma<br>
-						Adobe Indesign<br>
-						Adobe Illustrator<br>
-						Adobe Photoshop<br>
-						Adobe XD<br>
-						Wordpress<br>
-						Office 365<br></p>
-					</div>
-					<div class="content-field">
-						<h3>Other</h3>
-						<p>Illustration<br>
-						Game Design<br>
-						3D Modeling<br>
-						Sales<br>
-						Customer service</p>
-					</div>
-				</div>
+				<h3>Essentials</h3>
+				<p>UI Design<br>
+				UX Design<br>
+				Graphic Design<br>
+				Usability testing<br>
+				User research<br>
+				Accessibility evalutation<br>
+				HTML &amp; CSS<br>
+				Website building &amp; management<br></p>
+			</div>
+			<div class="content-field">
+				<h3>Tools</h3>
+				<p>Figma<br>
+				Adobe Indesign<br>
+				Adobe Illustrator<br>
+				Adobe Photoshop<br>
+				Adobe XD<br>
+				Wordpress<br>
+				Office 365<br></p>
+			</div>
+			<div class="content-field">
+				<h3>Other</h3>
+				<p>Illustration<br>
+				Game Design<br>
+				3D Modeling<br>
+				Sales<br>
+				Customer service</p>
 			</div>
 		</div>
     </div>
@@ -87,18 +80,20 @@
 
 <!--FOOTER-->
 	
-	<div class="footer">
-		<div class="footersection">
-			<div class="minisection">
-				<i class="material-symbols-outlined md-regular">phone</i>&nbsp;+358 50 518 2107
+	<footer>
+		<div class="navbar">
+			<div class="footersection">
+				<div class="minisection">
+					<i class="material-symbols-outlined md-regular">phone</i>&nbsp;+358 50 518 2107
+				</div>
+				<div class="minisection">
+					<i class="material-symbols-outlined md-regular">mail</i>&nbsp;miro.eskelinen@gmail.com
+				</div>
+				<a href="https://linkedin.com/in/miro-e-6664b3171" target="_blank" class="fa fa-linkedin"></a>
 			</div>
-			<div class="minisection">
-				<i class="material-symbols-outlined md-regular">mail</i>&nbsp;miro.eskelinen@gmail.com
-			</div>
-			<a href="https://linkedin.com/in/miro-e-6664b3171" target="_blank" class="fa fa-linkedin"></a>
+			<div class="minisection" style="font-size: 10px;"><span>&#169;</span> Miro Eskelinen | Build with HTML, CSS &amp; a teaspoon of Javascript</div>
 		</div>
-		<div class="minisection" style="font-size: 10px;"><span>&#169;</span> Miro Eskelinen | Build with HTML, CSS &amp; a teaspoon of Javascript</div>
-	</div>
+	</footer>
 
 	
 </body>
