--- a/graphicdesign.html
+++ b/graphicdesign.html
@@ -18,25 +18,27 @@
 	
 <!--NAVIGAATIO-->
 	
-	<div class="navbar">
-		<a class="logo-container" href="index.html">Miro Eskelinen</a>
-		<input id="menu-toggle" type="checkbox"/>
-		<label class="hamburger-container" for="menu-toggle">
-			<div class="hamburger"></div>
-		</label>
-		<div class="menu">
-			<a class="menubutton" href="uxui.html">UX&nbsp;&amp;&nbsp;UI&nbsp;Design</a>
-			<a class="menubutton current" href="graphicdesign.html">Graphic&nbsp;Design</a>
-			<a class="menubutton" href="aboutme.html">About&nbsp;me</a>
-		</div>  
-	</div>
+	<header>
+		<div class="navbar">
+			<a class="logo-container" href="index.html">Miro Eskelinen</a>
+			<input id="menu-toggle" type="checkbox"/>
+			<label class="hamburger-container" for="menu-toggle">
+				<div class="hamburger"></div>
+			</label>
+			<div class="menu">
+				<a class="menubutton" href="uxui.html">UX&nbsp;&amp;&nbsp;UI&nbsp;Design</a>
+				<a class="menubutton current" href="graphicdesign.html">Graphic&nbsp;Design</a>
+				<a class="menubutton" href="aboutme.html">About&nbsp;me</a>
+			</div>
+		</div>
+	</header>
 
 	 
 	
 <!--BODY-->	
 	
 
-	<div class="content-field" style="padding-top: 100px;">
+	<div class="content-field">
 		<h1>Graphic design</h1>
 		<p>Here are some examples work I've done over the years. Most of these i've done to customers as personal custom work but some i've done when I was working at an advertising agency called Orange Advertising. Clients include Staffroom, Citycon, K-Citymarket Riihimäki and Instrumentarium.</p>
 	</div>
@@ -127,18 +129,20 @@
 
 <!--FOOTER-->
 	
-	<div class="footer">
-		<div class="footersection">
-			<div class="minisection">
-				<i class="material-symbols-outlined md-regular">phone</i>&nbsp;+358 50 518 2107
+	<footer>
+		<div class="navbar">
+			<div class="footersection">
+				<div class="minisection">
+					<i class="material-symbols-outlined md-regular">phone</i>&nbsp;+358 50 518 2107
+				</div>
+				<div class="minisection">
+					<i class="material-symbols-outlined md-regular">mail</i>&nbsp;miro.eskelinen@gmail.com
+				</div>
+				<a href="https://linkedin.com/in/miro-e-6664b3171" target="_blank" class="fa fa-linkedin"></a>
 			</div>
-			<div class="minisection">
-				<i class="material-symbols-outlined md-regular">mail</i>&nbsp;miro.eskelinen@gmail.com
-			</div>
-			<a href="https://linkedin.com/in/miro-e-6664b3171" target="_blank" class="fa fa-linkedin"></a>
+			<div class="minisection" style="font-size: 10px;"><span>&#169;</span> Miro Eskelinen | Build with HTML, CSS &amp; a teaspoon of Javascript</div>
 		</div>
-		<div class="minisection" style="font-size: 10px;"><span>&#169;</span> Miro Eskelinen | Build with HTML, CSS &amp; a teaspoon of Javascript</div>
-	</div>
+	</footer>
 
 	
 </body>
