--- a/vuorox.html
+++ b/vuorox.html
@@ -33,62 +33,68 @@
 	
 <!--NAVIGAATIO-->
 	
-	<div class="navbar darkmode">
-		<a class="logo-container" href="index.html">Miro Eskelinen</a>
-		<input id="menu-toggle" type="checkbox"/>
-		<label class="hamburger-container" for="menu-toggle">
-			<div class="hamburger"></div>
-		</label>
-		<div class="menu">
-			<a class="menubutton" href="uxui.html">UX&nbsp;&amp;&nbsp;UI&nbsp;Design</a>
-			<a class="menubutton" href="graphicdesign.html">Graphic&nbsp;Design</a>
-			<a class="menubutton" href="aboutme.html">About&nbsp;me</a>
-		</div>  
-	</div>
+	<header class="darkmode">
+		<div class="navbar">
+			<a class="logo-container" href="index.html">Miro Eskelinen</a>
+			<input id="menu-toggle" type="checkbox"/>
+			<label class="hamburger-container" for="menu-toggle">
+				<div class="hamburger"></div>
+			</label>
+			<div class="menu">
+				<a class="menubutton" href="uxui.html">UX&nbsp;&amp;&nbsp;UI&nbsp;Design</a>
+				<a class="menubutton" href="graphicdesign.html">Graphic&nbsp;Design</a>
+				<a class="menubutton" href="aboutme.html">About&nbsp;me</a>
+			</div>
+		</div>
+	</header>
 
 	 
 	
 <!--HERO-->	
 	
-	<div class="hero reversed darkmode">
+	<div class="hero darkmode">
 		<div class="content-field">
-			<h1>Vuorox</h1>
-			<p>Assignment was to come up with an updated concept for Plaincomplex's Vuorox-app, an app where nurses can check up their work shifts and manage them.</p>
-			<div class="column" style="align-items: flex-start; height: fit-content;">
+			<div class="column reversed">
 				<div class="content-field">
-					<h3>Team</h3>
-					<p>Miro Eskelinen<br>
-					Laura Miettinen<br>
-					Iina Remonen</p>
+					<h1>Vuorox</h1>
+					<p>Assignment was to come up with an updated concept for Plaincomplex's Vuorox-app, an app where nurses can check up their work shifts and manage them.</p>
+					<div class="column" style="align-items: flex-start; height: fit-content;">
+						<div class="content-field">
+							<h3>Team</h3>
+							<p>Miro Eskelinen<br>
+							Laura Miettinen<br>
+							Iina Remonen</p>
+						</div>
+						<div class="content-field">
+							<h3>My role</h3>
+							<p>UX &amp; UI Design<br>
+							User research<br>
+							Wireframing<br>
+							Prototyping<br></p>
+						</div>
+						<div class="content-field">
+							<h3>Tools</h3>
+							<p>Figma<br>
+							Adobe Illustrator</p>
+						</div>
+					</div>
+					<br>
+					<div class="minisection">
+						<a class="button" href="#anchor">View screens</a>
+						<a class="button secondarybutton" href="uxui.html">Back</a>
+					</div>
 				</div>
 				<div class="content-field">
-					<h3>My role</h3>
-					<p>UX &amp; UI Design<br>
-					User research<br>
-					Wireframing<br>
-					Prototyping<br></p>
-				</div>
-				<div class="content-field">
-					<h3>Tools</h3>
-					<p>Figma<br>
-					Adobe Illustrator</p>
+					<img src="Liitteet/Vuorox/Hero.png" alt="Vuorox" style="max-height: 80vh">
 				</div>
 			</div>
-			<br>
-			<div class="minisection">
-				<a class="button" href="#anchor">View screens</a>
-				<a class="button secondarybutton" href="uxui.html">Back</a>
-			</div>
-		</div>
-		<div class="content-field">
-			<img src="Liitteet/Vuorox/Hero.png" alt="Vuorox" style="max-height: 80vh">
 		</div>
     </div>
 
 	
 	
 <!--BODY-->
-	<div  class="content-field lightmode" style="min-height: calc(100vh - 100px);">
+	<div  class="content-field fullscreen">
 		<div class="column">
 			<div class="content-field">
 				<h2>Problem</h2>
@@ -114,57 +120,60 @@
 			</div>
 		</div>
 	</div>
-	<div class="content-field darkmode" id="anchor">
-		<div class="column">
-			<div class="content-field">
-				<h3 style="color:var(--vuorox-tertiary)">The app</h3>
-				<h2>Shifts</h2>
-				<p>From the interviews we concluded that to see the upcoming shift is the most crucial information and right next to that the shifts of the current shift list.</p>
-			</div>
-			<div class="content-field" style="align-items: center;">
-				<img class="screen" src="Liitteet/Vuorox/Etusivu.png" alt="Etusivu">
-			</div>
-			<div class="content-field">
-				<div class="column">
-					<img class="screen" src="Liitteet/Vuorox/Aamuvuoro.png" alt="Aamuvuoro">
-					<img class="screen" src="Liitteet/Vuorox/Iltavuoro.png" alt="Iltavuoro">
+	
+	<div class="hero darkmode">
+		<div class="content-field" id="anchor">
+			<div class="column">
+				<div class="content-field">
+					<h3 style="color:var(--vuorox-tertiary)">The app</h3>
+					<h2>Shifts</h2>
+					<p>From the interviews we concluded that to see the upcoming shift is the most crucial information and right next to that the shifts of the current shift list.</p>
 				</div>
-				<div class="column">
-					<img class="screen" src="Liitteet/Vuorox/Yovuoro.png" alt="Yövuoro">
-					<img class="screen" src="Liitteet/Vuorox/Vapaa.png" alt="Vapaa">
+				<div class="content-field" style="align-items: center;">
+					<img class="screen" src="Liitteet/Vuorox/Etusivu.png" alt="Etusivu">
+				</div>
+				<div class="content-field">
+					<div class="column">
+						<img class="screen" src="Liitteet/Vuorox/Aamuvuoro.png" alt="Aamuvuoro">
+						<img class="screen" src="Liitteet/Vuorox/Iltavuoro.png" alt="Iltavuoro">
+					</div>
+					<div class="column">
+						<img class="screen" src="Liitteet/Vuorox/Yovuoro.png" alt="Yövuoro">
+						<img class="screen" src="Liitteet/Vuorox/Vapaa.png" alt="Vapaa">
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-	<div class="content-field darkmode" style="min-height: calc(100vh - 100px);">
-		<div class="column">
-			<div class="content-field" style="width: 30%;">
-				<h2>Wishes</h2>
-				<p>The most crucial functions aside from seeing the work shifts were to leave day-specific shift wishes and to manage your general work time wishes.</p>
-			</div>
+		<div class="content-field">
 			<div class="column">
-				<img class="screen" src="Liitteet/Vuorox/Vuorotoiveet.png" alt="Toiveet">
-				<img class="screen" src="Liitteet/Vuorox/Vuorotoive.png" alt="Toive" style="max-height: 55vh">
-				<img class="screen" src="Liitteet/Vuorox/Vapaatoive.png" alt="Vapaatoive" style="max-height: 55vh">
-				<img class="screen" src="Liitteet/Vuorox/Yleiset-vuorotoiveet.png" alt="Yleiset">
+				<div class="content-field" style="width: 30%;">
+					<h2>Wishes</h2>
+					<p>The most crucial functions aside from seeing the work shifts were to leave day-specific shift wishes and to manage your general work time wishes.</p>
+				</div>
+				<div class="column">
+					<img class="screen" src="Liitteet/Vuorox/Vuorotoiveet.png" alt="Toiveet">
+					<img class="screen" src="Liitteet/Vuorox/Vuorotoive.png" alt="Toive" style="max-height: 55vh">
+					<img class="screen" src="Liitteet/Vuorox/Vapaatoive.png" alt="Vapaatoive" style="max-height: 55vh">
+					<img class="screen" src="Liitteet/Vuorox/Yleiset-vuorotoiveet.png" alt="Yleiset">
+				</div>
 			</div>
 		</div>
-	</div>
-	<div class="content-field darkmode" style="min-height: calc(100vh - 100px);">
-		<div class="column">
+		<div class="content-field" style="min-height: calc(100vh - 100px);">
 			<div class="column">
-				<div class="content-field">
-					<h2>Settings</h2>
-					<img class="screen" src="Liitteet/Vuorox/Asetukset.png" alt="Asetukset">
+				<div class="column">
+					<div class="content-field">
+						<h2>Settings</h2>
+						<img class="screen" src="Liitteet/Vuorox/Asetukset.png" alt="Asetukset">
+					</div>
+					<div class="content-field">
+						<h2>Log in</h2>
+						<img class="screen" src="Liitteet/Vuorox/Kirjautumisruutu.png" alt="Asetukset">
+					</div>
 				</div>
 				<div class="content-field">
-					<h2>Log in</h2>
-					<img class="screen" src="Liitteet/Vuorox/Kirjautumisruutu.png" alt="Asetukset">
+					<h2>Desktop</h2>
+					<img class="screen" src="Liitteet/Vuorox/Desktop.png" alt="Asetukset">
 				</div>
-			</div>
-			<div class="content-field">
-				<h2>Desktop</h2>
-				<img class="screen" src="Liitteet/Vuorox/Desktop.png" alt="Asetukset">
 			</div>
 		</div>
 	</div>
@@ -173,18 +182,20 @@
 
 <!--FOOTER-->
 	
-	<div class="footer">
-		<div class="footersection">
-			<div class="minisection">
-				<i class="material-symbols-outlined md-regular">phone</i>&nbsp;+358 50 518 2107
+	<footer>
+		<div class="navbar">
+			<div class="footersection">
+				<div class="minisection">
+					<i class="material-symbols-outlined md-regular">phone</i>&nbsp;+358 50 518 2107
+				</div>
+				<div class="minisection">
+					<i class="material-symbols-outlined md-regular">mail</i>&nbsp;miro.eskelinen@gmail.com
+				</div>
+				<a href="https://linkedin.com/in/miro-e-6664b3171" target="_blank" class="fa fa-linkedin"></a>
 			</div>
-			<div class="minisection">
-				<i class="material-symbols-outlined md-regular">mail</i>&nbsp;miro.eskelinen@gmail.com
-			</div>
-			<a href="https://linkedin.com/in/miro-e-6664b3171" target="_blank" class="fa fa-linkedin"></a>
+			<div class="minisection" style="font-size: 10px;"><span>&#169;</span> Miro Eskelinen | Build with HTML, CSS &amp; a teaspoon of Javascript</div>
 		</div>
-		<div class="minisection" style="font-size: 10px;"><span>&#169;</span> Miro Eskelinen | Build with HTML, CSS &amp; a teaspoon of Javascript</div>
-	</div>
+	</footer>
 
 	
 </body>
