--- a/lekatech.html
+++ b/lekatech.html
@@ -93,27 +93,27 @@
 	
 <!--BODY-->
 
-	<div class="content-field lightmode" style="min-height: calc(100vh - 100px)">
-		<div class="column reversed">
-			<div class="column" style="flex-direction: row; gap: 0;">
-				<div class="content-field" style="width: fit-content; align-items: center !important;">
-					<h3 style="color: var(--text-light);">Agitator M3</h3>
-					<img src="Liitteet/Lekatech/Agitator.png" alt="Agitator M3" style="max-height: 65vh;">
-				</div>
-				<div class="content-field" style="width: fit-content; align-items: center !important;">
-					<h3 style="color: var(--text-light);">GranitE3</h3>
-					<img src="Liitteet/Lekatech/Granite.png" alt="GranitE3" style="max-height: 65vh;">
-				</div>
-			</div>
+	<div class="content-field fullscreen">
+		<div class="column">
 			<div class="content-field">
 				<h2>Assignment</h2>
 				<p>Assignment from to the our entire team was to come up with <b>two hammer concepts</b> and <b>two hammer UI concepts.</b> The hammer-team and the UI-team worked mostly separately but with constant check ups and critiques with each other. Names of the finnished hammer concepts were Agitator M3 and GranitE3.<br></p>
 				<h3>Basic info about the breaker hammers</h3>
 				<p>The remote control of the hammer happens from excavator machine cabin where the <a href="#anchor1">touchscreen-device</a> is located. The hammering starts when user presses a pedal in the cabin with their foot. So there is no "Start hammering" type button in the UI. <b>Note: UI also includes physical buttons.</b></p>
 			</div>
+			<div class="column" style="flex-direction: row;">
+				<div class="content-field" style="align-items: center;">
+					<h3>Agitator M3</h3>
+					<img src="Liitteet/Lekatech/Agitator.png" alt="Agitator M3" style="max-height: 65vh;">
+				</div>
+				<div class="content-field" style="align-items: center;">
+					<h3>GranitE3</h3>
+					<img src="Liitteet/Lekatech/Granite.png" alt="GranitE3" style="max-height: 65vh;">
+				</div>
+			</div>
 		</div>
 	</div>
-	<div class="content-field" style="min-height: calc(100vh - 100px)">
+	<div class="content-field">
 		<div class="column">
 			<div class="content-field">
 				<h2>UI Concepts</h2>
@@ -137,24 +137,20 @@
 					</div>
 				</div>
 			</div>
-			<div class="column">
-				<div class="content-field" style="width: fit-content">
-					<h3 style="color: var(--text-light);">Enhanced</h3>
+			<div class="column" style="flex-direction: row;">
+				<div class="content-field">
+					<h3>Enhanced</h3>
 					<img class="screen" src="Liitteet/Lekatech/Enhanced.png" alt="Enhanced">
 				</div>
-				<div class="content-field" style="width: fit-content">
-					<h3 style="color: var(--text-light);">Innovative</h3>
+				<div class="content-field">
+					<h3>Innovative</h3>
 					<img class="screen" src="Liitteet/Lekatech/Innovative.png" alt="Innovative">
 				</div>
 			</div>
 		</div>
 	</div>
-	<div class="content-field" style="min-height: calc(100vh - 100px)">
-		<div class="column reversed">
-			<div class="content-field" id="anchor1" style="align-items: center;">
-				<h3 style="color: var(--text-light);">The device UI is used</h3>
-				<img src="Liitteet/Lekatech/Device-Home.png" alt="Device" style="max-height: 65vh;">
-			</div>
+	<div class="content-field">
+		<div class="column">
 			<div class="content-field">
 				<h2>Design drivers</h2>
 				<div class="column">
@@ -171,6 +167,10 @@
 						<p>Elements are self-explanatory. Button looks like a button. No deduction required from the user.</p>
 					</div>
 				</div>
+			</div>
+			<div class="content-field" id="anchor1" style="align-items: center;">
+				<h3 style="color: var(--text-light);">The device UI is used</h3>
+				<img src="Liitteet/Lekatech/Device-Home.png" alt="Device" style="max-height: 65vh;">
 			</div>
 		</div>
 	</div>
@@ -271,7 +271,7 @@
 					<img src="Liitteet/Lekatech/Physical-buttons.png" alt="Physival buttons" style="max-width: 400px;">
 				</div>
 				<div class="content-field" style="width: 50%;">
-					<img src="Liitteet/Lekatech/Device-Home.png" alt="Device">
+					<img src="Liitteet/Lekatech/Device-Home.png" alt="Device" style="max-height: 65vh;">
 				</div>
 			</div>
 		</div>
