--- a/lekatech.html
+++ b/lekatech.html
@@ -52,7 +52,7 @@
 	
 <!--HERO-->	
 	
-	<div class="hero darkmode" style="background-image: url(Liitteet/Lekatech/Lekatech-mockup-cut.png); background-size: 90vh; background-position: right 100px;">
+	<div class="hero darkmode">
 		<div class="content-field">
 			<div class="column reversed">
 				<div class="content-field">
@@ -83,7 +83,7 @@
 						<a class="button secondarybutton" href="uxui.html">Back</a>
 					</div>
 				</div>
-				<div class="content-field" style="min-height: 65vh;">
+				<div class="content-field" style="min-height: 40vh;">
 				</div>
 			</div>
 		</div>
